hphp/hack/test/typecheck/array_map7.php.exp
File "array_map7.php", line 24, characters 3-32:
  darray<arraykey, bool>
File "array_map7.php", line 27, characters 3-34:
  _
File "array_map7.php", line 29, characters 25-52:
Invalid argument (Typing[4110])
File "array_map7.php", line 37, characters 32-49:
Expected darray<mixed, bool>
File "array_map7.php", line 13, characters 3-15:
But got varray<[unresolved]>
